name:                morse
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matt
maintainer:          matt.m.sumner@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    Morse
  ghc-options:        -Wall -fwarn-tabs
  build-depends:      base >=4.8 && <4.9
                    , containers
                    , QuickCheck
  hs-source-dirs:     src
  default-language:   Haskell2010

executable morse-code
  main-is:            Main.hs
  ghc-options:        -Wall -fwarn-tabs
  hs-source-dirs:     src
  build-depends:      base >=4.8 && <4.9
                    , containers
                    , morse
                    , QuickCheck
  default-language:   Haskell2010

test-suite tests
  ghc-options:        -Wall -fwarn-tabs
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:      base
                    , containers
                    , morse
                    , QuickCheck
  default-language:   Haskell2010
